<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.codepath.apps.basictwitter.TwitterTimelineActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item 
        android:id="@+id/action_compose"
        android:showAsAction="always"
        android:title="@string/compose"
        android:onClick="onComposeAction"
        android:icon="@drawable/ic_action_compose" />
    
    <item 
        android:id="@+id/action_view_profile"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_profile"
        android:onClick="onProfileView"
        android:title="@string/profile_view_title" />

</menu>
